fix: fixed analytics related service (individual url) adn added few helper methods to update click count in the urlmapping class, work pending here